syntax = "proto3";
option csharp_namespace = "MyChat.Protocol";
package MyChat.Protocol;

// 消息类型枚举
enum MsgType {
    Text = 0;
    Image = 1;
    File = 2; 
    // ★★★ 必须加上这一行，否则报错 ★★★
    Aistream = 3; 
}

message ChatMsg {
    string id = 1;
    string senderId = 2;
    string receiverId = 3;
    string content = 4;
    int64 sendTime = 5;
    bool isGroup = 6;
    MsgType type = 7;

    string senderName = 8;
    string senderAvatar = 9; 
    string fileName = 10;
    int64 fileSize = 11; 
}
// ★★★ 新增：好友信息变更通知 ★★★
message FriendInfoUpdateNotice {
    string friendId = 1;
    string nickname = 2;
    string avatar = 3; // 新的 Base64 头像
}