syntax = "proto3";
option csharp_namespace = "MyChat.Protocol";
package MyChat.Protocol;

// 登录请求
message LoginReq {
    string account = 1;
    string password = 2;
}

// 登录响应
message LoginResp {
    bool isSuccess = 1;
    string message = 2;
    string userId = 3;
    string nickname = 4;
}

// --- 新增：注册协议 ---

// 注册请求
message RegisterReq {
    string account = 1;
    string password = 2;
    string nickname = 3; // 昵称
}

// 注册响应
message RegisterResp {
    bool isSuccess = 1;
    string message = 2;
    string newUserId = 3; // 注册成功后分配的ID
}